[project]
name = "financial-ai-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.2",
    "duckduckgo-search>=8.0.4",
    "fastapi[standard]>=0.115.12",
    "groq>=0.28.0",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.63",
]
